--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       }
     },
     "routes": [
-      { "src": "/(.*)",  "dest": "/api/index.php" },
+      { "src": "/(.*)",  "dest": "/index.php" },
       { "src": "/css/style.css", "dest": "/static/style.css" },
       { "src": "/js/script.js", "dest": "/static/script.js" }]
 }
