--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
-    "functions": {
-      "api/**/*.php": {
-        "runtime": "vercel-php@0.5.2"
-      }
-    },
     "routes": [
-      { "src": "/(.*)",  "dest": "/index.php" },
-      { "src": "/css/style.css", "dest": "/static/style.css" },
-      { "src": "/js/script.js", "dest": "/static/script.js" }]
-}
+      { "src": "/(.*)",  "dest": "/index.php" }
+    ]
+  }
